--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Ignored Files
-/fonts
-/sass
-/images/parallax/original
+/node_modules
